added basket_page and minor fixes to other files

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,5 @@
 markers = 
     smoke: marker for smoke tests
     regression: marker for regression tests
-    login-guest: marker for login guest tests
+    login_guest: marker for login guest tests
     basket_test: marker for basket tests
