--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
     regression: marker for regression tests
     login_guest: marker for login guest tests
     basket_test: marker for basket tests
+    need_review: marker for final lesson
